<resources>
    <string name="app_name">Shopp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="programming">Programming</string>
    <string name="education">Education</string>
    <string name="fantasy">Fantasy</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="software_development">Software Development</string>
    <string name="career">Career</string>
    <string name="web_development">Web Development</string>
    <string name="all">All</string>
    <string name="search">Search </string>
    <string name="home">Home </string>
    <string name="cart">Cart </string>
    <string name="account">Account </string>
    <string name="chat">Chat </string>
    <string name="purchase">Purchase</string>
    <string name="price">Price: </string>
    <string name="my_order">My order</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="history_review">History Review</string>
    <string name="name"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>