<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF5722"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:title="@string/cart"
        app:navigationIcon="@drawable/grocerystore" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@drawable/bg_bottom_sheet"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:layout_weight="0.4"
            android:text="@string/price"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FF0000"
            android:layout_weight="1"
            android:text="Giá: $0.00"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCheckout"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/gb_bottom_orange"
            android:layout_height="wrap_content"
            android:text="@string/purchase" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu" />
</LinearLayout>
