<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/yellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header (Ảnh bìa + Avatar) -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/gb_bottom_purple"
            android:layout_height="260dp">

            <!-- Ảnh bìa -->
            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_android_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Ảnh đại diện -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAvatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="140dp"
                android:src="@drawable/ic_android_black_24dp"
                android:scaleType="centerCrop"
                android:padding="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Thông tin người dùng -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="22dp"

            android:paddingBottom="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nguyễn Văn A"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <ImageButton
                    android:id="@+id/imgPen"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/pen"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="email@example.com"
                android:textSize="14sp"
                android:textColor="#666666"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple" />

        <!-- Các chức năng -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <!-- Đơn hàng -->
            <LinearLayout
                android:id="@+id/layoutOrders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/gb_bottom_purple">

                <ImageView
                    android:layout_marginStart="10dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/grocerystore"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/yellow"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutHistoryReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="5dp"
                android:background= "@drawable/gb_bottom_purple">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/feedback"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:textColor="@color/yellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_review"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Đổi mật khẩu -->
            <LinearLayout
                android:id="@+id/layoutChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16dp"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:focusable="true"
                android:background="@drawable/gb_bottom_purple">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/padlock"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow"
                    android:text="@string/change_password"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Đăng xuất -->
            <LinearLayout
                android:id="@+id/layoutLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/gb_bottom_purple">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/out"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textSize="16sp"
                    android:textColor="#FF4444" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
